--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#FF4D4C4D</color>
+    <color name="colorPrimaryDark">#FF383638</color>
+    <color name="colorSecondary">#FF393839</color>
+    <color name="colorBluePrimary">#FF189BFA</color>
+    <color name="colorBlueSecondary">#FF2C4960</color>
 </resources>
