--- a/circularseekbar/src/main/res/values/attrs_circularseekbar.xml
+++ b/circularseekbar/src/main/res/values/attrs_circularseekbar.xml
@@ -17,13 +17,24 @@
         <attr name="circularSeekBar_trackColor" format="color" />
         <!-- Foreground progress color of CircularSeekBar. -->
         <attr name="circularSeekBar_progressColor" format="color" />
-        <!-- Set to true if you want to interact with TapDown to change CircularSeekBar's progress. -->
-        <attr name="circularSeekBar_interactive" format="boolean" />
         <!-- Styles to use for arcs endings. -->
-        <attr name="circularSeekBar_barStrokeCap" format="enum" >
+        <attr name="circularSeekBar_barStrokeCap" format="enum">
             <enum name="butt" value="0" />
             <enum name="round" value="1" />
             <enum name="square" value="2" />
         </attr>
+        <!-- Show animation when CircularSeekBar's Progress changes. -->
+        <attr name="circularSeekBar_showAnimation" format="boolean" />
+        <!-- Animation Style of CircularSeekBar. -->
+        <attr name="circularSeekBar_animation" format="enum">
+            <enum name="normal" value="0" />
+            <enum name="bounce" value="1" />
+            <enum name="decelerate" value="2" />
+            <enum name="accelerate_decelerate" value="3" />
+        </attr>
+        <!-- Duration milliseconds of the animation. -->
+        <attr name="circularSeekBar_animationDurationMillis" format="integer" />
+        <!-- Set to true if you want to interact with TapDown to change CircularSeekBar's progress. -->
+        <attr name="circularSeekBar_interactive" format="boolean" />
     </declare-styleable>
 </resources>
