--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,22 @@
     <color name="colorBluePrimary">#FF189BFA</color>
     <color name="colorBlueSecondary">#FF2C4960</color>
     <color name="colorGrey">#FF9E9E9E</color>
+
+    <color name="red">#FFF44336</color>
+    <color name="orange">#FFFFAB40</color>
+    <color name="yellow">#FFFFEB3B</color>
+    <color name="green">#FF4CAF50</color>
+    <color name="blue">#FF2196F3</color>
+    <color name="indigo">#FF3F51B5</color>
+    <color name="purple">#FF9C27B0</color>
+
+    <array name="rainbow">
+        <item>@color/red</item>
+        <item>@color/orange</item>
+        <item>@color/yellow</item>
+        <item>@color/green</item>
+        <item>@color/blue</item>
+        <item>@color/indigo</item>
+        <item>@color/purple</item>
+    </array>
 </resources>
